force-app/main/default/objects/LLC_BI__Roll_Up_Column__c/fields/LLC_BI__Collateral_Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collateral_Category__c</fullName>
    <description>This field notates what Collateral Category this column relates to. For example, if the Collateral Category is set to Real Estate and the Roll-Up table is filtering by Collateral Category = Real Estate, this column will be displayed.</description>
    <label>Collateral Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LLC_BI__Collateral_Category_Type</valueSetName>
    </valueSet>
</CustomField>