force-app/main/default/objects/LLC_BI__Roll_Up_Column__c/fields/LLC_BI__Display_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Display_Type__c</fullName>
    <description>This field controls how the values displayed in this column are formatted.</description>
    <label>Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LLC_BI__Sensitivity_Analysis_Display_Type</valueSetName>
    </valueSet>
</CustomField>