force-app/main/default/objects/LLC_BI__Roll_Up_Column__c/fields/LLC_BI__Formula__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Formula__c</fullName>
    <description>This formula is used to calculate the column values for this column.</description>
    <label>Formula</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>